<resources>
    <string name="app_name">Plate Check</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Failed</string>

    <!-- Strings related to main menu -->
    <string name="start_ocr">Start Session</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>

    <!-- Strings related to edit password -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="password_change_success">Password was successfully changed</string>
    <string name="password_change_fail">Password change failed</string>

    <!-- Strings related to CameraActivity -->
    <string name="no_infraction">No infraction occurred</string>
    <string name="infraction_occured">Infraction occurred. Details have been logged.</string>

    <!-- Strings related to settings -->
    <string name="advanced_settings">Advance Settings</string>

    <string name="no_network_1">No network connection detected</string>
    <string name="no_network_2">No network connection detected. Please check device settings</string>
    <string name="request_credentials_1">Please enter a username and password</string>


    <!-- Debug stuff -->
    <string name="not_implemented">Feature currently unavailable</string>
    <string name="bad_json">Bad JSON format. Contact an admin.</string>
    <string name="connect_failed">Failed to connect to server</string>
    <string name="segment_failed">Segmentation failed</string>

    <!-- Settings -->
    <string name="process_settings"><b><b><b>Pre-processing Settings</b></b></b></string>

    <string name="blur_settings"><b><i>Blur Settings</i></b></string>
    <string name="kernel_width">Kernel width</string>
    <string name="kernel_height">Kernel height</string>
    <string name="distribution">Distribution</string>

    <string name="grey_settings"><b><i>Grey Settings</i></b></string>
    <string name="grey_mode">Grey Mode</string>

    <string name="thresh_settings"><b><i>Threshold Settings</i></b></string>
    <string name="lower_bound">Lower bound</string>
    <string name="upper_bound">Upper bound</string>

    <string name="morph_settings"><b><i>Image Morphology Settings</i></b></string>
    <string name="open_width">Open width</string>
    <string name="open_height">Open height</string>

    <string name="contour_settings"><b><i>Contour Settings</i></b></string>
    <string name="min_width">Minimum width</string>
    <string name="min_height">Minimum height</string>
    <string name="max_width">Maximum width</string>
    <string name="max_height">Maximum height</string>
    <string name="min_aspect">Minimum aspect</string>
    <string name="max_aspect">Maximum aspect</string>

    <string name="registration">"Registration: "</string>
    <string name="save_fail">Save Failed.</string>
    <string name="result_validate">Result Validation</string>
    <string name="number_plate">"Number Plate: "</string>
    <string name="edit_continue">Edit or Continue?</string>
    <string name="edit">Edit</string>
    <string name="continue_str">Continue</string>
    <string name="empty_field">One or more fields are empty</string>
    <string name="password_short">Password too short</string>
    <string name="password_no_match">New passwords don\'t match</string>
    <string name="password_same">New password cannot be the same as the current password</string>


</resources>
